--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,6 @@ name: Generate Snake
 
 on:
   schedule:
-    # Her 9 saatte bir çalıştır
     - cron: "0 */9 * * *"
 
   workflow_dispatch:
@@ -12,6 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -20,7 +24,6 @@ jobs:
         id: snake-gif
         with:
           github_user_name: tayfunuyar
-          # Bu sonraki 2 satır dosyaları "output" adında bir dalda oluşturur. Bu, ana dalın karışıklık yapmasını engeller.
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
@@ -37,7 +40,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          # Yukarıda bahsettiğimiz hedef dal
           target_branch: output
           build_dir: dist
         env:
